--- a/.github/workflows/test-wf.yml
+++ b/.github/workflows/test-wf.yml
@@ -34,11 +34,10 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          ls -alh
+          ls -alhrt
       # always step
       - name: cleanup environment
         if: always()
         run: |
           rm -rf ./*
-          rm -rf ./.*
           ls -alh
